update gtm version and spotless