@@ -3,6 +3,7 @@ package com.epimorphismmc.monomorphism.machine.fancyconfigurator;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
 import com.gregtechceu.gtceu.api.gui.fancy.IFancyConfigurator;
 import com.gregtechceu.gtceu.data.lang.LangHandler;
+
 import com.lowdragmc.lowdraglib.gui.editor.ColorPattern;
 import com.lowdragmc.lowdraglib.gui.texture.GuiTextureGroup;
 import com.lowdragmc.lowdraglib.gui.texture.IGuiTexture;
@@ -12,13 +13,15 @@ import com.lowdragmc.lowdraglib.gui.widget.ButtonWidget;
 import com.lowdragmc.lowdraglib.gui.widget.ImageWidget;
 import com.lowdragmc.lowdraglib.gui.widget.Widget;
 import com.lowdragmc.lowdraglib.gui.widget.WidgetGroup;
-import lombok.Getter;
-import lombok.Setter;
-import lombok.experimental.Accessors;
+
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.Component;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
+
+import lombok.Getter;
+import lombok.Setter;
+import lombok.experimental.Accessors;
 
 import java.util.Collections;
 import java.util.List;
@@ -31,10 +34,13 @@ import java.util.function.Supplier;
 public class CustomModeFancyConfigurator implements IFancyConfigurator {
     @Getter
     private final IGuiTexture icon;
+
     private final String key;
     private final int modes;
+
     @Setter
     private boolean hasTooltips;
+
     @Setter
     private boolean hasModeTooltips;
 
@@ -42,10 +48,13 @@ public class CustomModeFancyConfigurator implements IFancyConfigurator {
     private final Supplier<Integer> modeGetter;
     private final Consumer<Integer> modeSetter;
 
-    public CustomModeFancyConfigurator(String key, IGuiTexture icon, int modes,
-                                       Function<Integer, String> nameGetter,
-                                       Supplier<Integer> modeGetter,
-                                       Consumer<Integer> modeSetter) {
+    public CustomModeFancyConfigurator(
+            String key,
+            IGuiTexture icon,
+            int modes,
+            Function<Integer, String> nameGetter,
+            Supplier<Integer> modeGetter,
+            Consumer<Integer> modeSetter) {
         this.key = key;
         this.icon = icon;
         this.modes = modes;
@@ -61,14 +70,21 @@ public class CustomModeFancyConfigurator implements IFancyConfigurator {
 
         for (int i = 0; i < modes; ++i) {
             int tMode = i;
-            group.addWidget(new ButtonWidget(2, 2 + i * 20, 136, 20,
-                    IGuiTexture.EMPTY, cd -> modeSetter.accept(tMode))
-                    .setHoverTooltips(hasModeTooltips
-                        ? List.copyOf(LangHandler.getSingleOrMultiLang(nameGetter.apply(tMode) + ".desc"))
-                        : Collections.emptyList()));
-            group.addWidget(new ImageWidget(2, 2 + i * 20, 136, 20,
-                    () -> new GuiTextureGroup(ResourceBorderTexture.BUTTON_COMMON.copy()
-                            .setColor(modeGetter.get() == tMode ? ColorPattern.CYAN.color : -1),
+            group.addWidget(new ButtonWidget(
+                            2, 2 + i * 20, 136, 20, IGuiTexture.EMPTY, cd -> modeSetter.accept(tMode))
+                    .setHoverTooltips(
+                            hasModeTooltips
+                                    ? List.copyOf(LangHandler.getSingleOrMultiLang(nameGetter.apply(tMode) + ".desc"))
+                                    : Collections.emptyList()));
+            group.addWidget(new ImageWidget(
+                    2,
+                    2 + i * 20,
+                    136,
+                    20,
+                    () -> new GuiTextureGroup(
+                            ResourceBorderTexture.BUTTON_COMMON
+                                    .copy()
+                                    .setColor(modeGetter.get() == tMode ? ColorPattern.CYAN.color : -1),
                             new TextTexture(nameGetter.apply(tMode))
                                     .setWidth(136)
                                     .setType(TextTexture.TextType.ROLL))));
@@ -83,7 +99,9 @@ public class CustomModeFancyConfigurator implements IFancyConfigurator {
 
     @Override
     public List<Component> getTooltips() {
-        return hasTooltips ? List.copyOf(LangHandler.getSingleOrMultiLang(key + ".desc")) : Collections.emptyList();
+        return hasTooltips
+                ? List.copyOf(LangHandler.getSingleOrMultiLang(key + ".desc"))
+                : Collections.emptyList();
     }
 
     @Override
